# rust-strapi-migration-script

./: Cargo.toml  README.md
src/: main.rs
src/strapi_models/: mod.rs  strapi_models.rs
