[package]
name = "strapi-migration"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = "1.3.0"
chrono = "0.4.23"
futures-util = "0.3.25"
reqwest = { version = "0.11.13", features = ["blocking", "json", "multipart"]}
serde = "1.0.152"
serde_derive = "1.0.152"
serde_json = "1.0.91"
slugify = "0.1.0"
tokio = { version = "1.24.1", features = ["full"] }
